--- a/src/app/components/blog-edit-form/blog-edit-form.component.html
+++ b/src/app/components/blog-edit-form/blog-edit-form.component.html
@@ -59,7 +59,11 @@
 
     <button class="btn btn-primary" (click)="doCancelEdit()" >Cancel</button>&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <button class="btn btn-danger"  (click)="deleteBlogEntry()"  *ngIf="this.isEditExistingBlogEntry()" >Delete</button>
+    <button class="btn btn-danger"  (click)="deleteBlogEntry()"  *ngIf="this.isEditExistingBlogEntry()" >Delete</button>&nbsp;&nbsp;&nbsp;&nbsp;
+
+    <button class="btn btn-primary" (click)="firebaseAdd()"    >Firbase ADD</button>&nbsp;&nbsp;
+    <button class="btn btn-primary" (click)="firebaseUpdate()" >Firbase UPDATE</button>&nbsp;&nbsp;
+    <button class="btn btn-primary" (click)="firebaseDelete()" >Firbase DELETE</button>&nbsp;&nbsp;
 
   </form>
 
