--- a/src/app/components/blog-edit-form/blog-edit-form.component.html
+++ b/src/app/components/blog-edit-form/blog-edit-form.component.html
@@ -65,6 +65,11 @@
     <button class="btn btn-primary" (click)="firebaseUpdate()" >Firbase UPDATE</button>&nbsp;&nbsp;
     <button class="btn btn-primary" (click)="firebaseDelete()" >Firbase DELETE</button>&nbsp;&nbsp;
 
+    &nbsp;&nbsp;
+    <button class="btn btn-primary" (click)="jsonServerAdd()"    >JsonServer ADD</button>&nbsp;&nbsp;
+    <button class="btn btn-primary" (click)="jsonServerUpdate()" >JsonServer UPDATE</button>&nbsp;&nbsp;
+    <button class="btn btn-primary" (click)="jsonServerDelete()" >JsonServer DELETE</button>&nbsp;&nbsp;
+
   </form>
 
 </div>
