--- a/src/app/components/blog-entry-list/blog-entry-list.component.html
+++ b/src/app/components/blog-entry-list/blog-entry-list.component.html
@@ -2,7 +2,7 @@
 
   <div class="css-blog-view-seperator-div-col1">
 
-      <div *ngIf="entry_count === 0; else div_show_blog_list">
+      <div id="test_id_1" *ngIf="entry_count === 0; else div_show_blog_list">
 
           <p>There are no Blog Entries</p>
 
