--- a/src/app/components/blog-entry-list/blog-entry-list.component.html
+++ b/src/app/components/blog-entry-list/blog-entry-list.component.html
@@ -13,6 +13,7 @@
         <p>Number of Blog Entries {{ entry_count }}</p>
 
           <app-button
+            id="add_blog_entry_button"
             *ngIf="isUserLoggedIn()"
             color="green"
             text="Add Blog Entry"
