--- a/src/app/components/blog-detail-short/blog-detail-short.component.html
+++ b/src/app/components/blog-detail-short/blog-detail-short.component.html
@@ -1,6 +1,6 @@
 <div class="css-blog-entry-container action-row" >
 
-  <div *ngIf="isUserLoggedIn()" >
+  <div id="id_user_logged_in" *ngIf="isUserLoggedIn()" >
 
     <div class="edit-area" *ngIf="canUserEditBlogEntry(); else placeholder">
 
