--- a/src/app/components/blog-edit-form/blog-edit-form.component.html
+++ b/src/app/components/blog-edit-form/blog-edit-form.component.html
@@ -57,16 +57,11 @@
 
     <br />
 
-    <button class="btn btn-primary" (click)="doSubmitMyForm( myUserForm )" type="submit" >Submit</button>&nbsp;&nbsp;
+    <button class="btn btn-primary" type="submit" >Submit</button>&nbsp;&nbsp;
 
     <button class="btn btn-primary" (click)="doCancelEdit()" >Cancel</button>&nbsp;&nbsp;&nbsp;&nbsp;
 
     <button class="btn btn-danger"  (click)="deleteBlogEntry()"  *ngIf="this.isEditExistingBlogEntry()" >Delete</button>&nbsp;&nbsp;&nbsp;&nbsp;
-
-    <button class="btn btn-primary" (click)="jsonServerAdd()"    >JsonServer ADD</button>&nbsp;&nbsp;
-    <button class="btn btn-primary" (click)="jsonServerUpdate()" >JsonServer UPDATE</button>&nbsp;&nbsp;
-    <button class="btn btn-primary" (click)="jsonServerDelete()" >JsonServer DELETE</button>&nbsp;&nbsp;
-    <button class="btn btn-primary" (click)="jsonServerInit()"   >JsonServer Init</button>&nbsp;&nbsp;
 
   </form>
 
