--- a/src/app/components/blog-edit-form/blog-edit-form.component.html
+++ b/src/app/components/blog-edit-form/blog-edit-form.component.html
@@ -55,16 +55,11 @@
 
     <br />
 
-    <button class="btn btn-primary" type="submit" >Submit</button>&nbsp;&nbsp;
+    <button class="btn btn-primary" type="submit" (click)="setPressedButton( 'save' )"  >Submit</button>&nbsp;&nbsp;
 
-    <button class="btn btn-primary" (click)="doCancelEdit()" >Cancel</button>&nbsp;&nbsp;&nbsp;&nbsp;
+    <button class="btn btn-primary" type="submit" (click)="setPressedButton( 'cancel' )"  >Cancel</button>&nbsp;&nbsp;&nbsp;&nbsp;
 
-    <button class="btn btn-danger"  (click)="deleteBlogEntry()"  *ngIf="this.isEditExistingBlogEntry()" >Delete</button>&nbsp;&nbsp;&nbsp;&nbsp;
-
-    <button class="btn btn-primary" (click)="jsonServerAdd()"    >JsonServer ADD</button>&nbsp;&nbsp;
-    <button class="btn btn-primary" (click)="jsonServerUpdate()" >JsonServer UPDATE</button>&nbsp;&nbsp;
-    <button class="btn btn-primary" (click)="jsonServerDelete()" >JsonServer DELETE</button>&nbsp;&nbsp;
-    <button class="btn btn-primary" (click)="jsonServerInit()"   >JsonServer Init</button>&nbsp;&nbsp;
+    <button class="btn btn-danger"  type="submit" (click)="setPressedButton( 'delete' )" *ngIf="this.isEditExistingBlogEntry()" >Delete</button>&nbsp;&nbsp;&nbsp;&nbsp;
 
   </form>
 
