--- a/src/app/components/blog-entry-list/blog-entry-list.component.html
+++ b/src/app/components/blog-entry-list/blog-entry-list.component.html
@@ -17,7 +17,7 @@
             *ngIf="isUserLoggedIn()"
             color="green"
             text="Add Blog Entry"
-            (btnClick)="showViewAddBlogEntry2()"
+            (btnClick)="showViewAddBlogEntry()"
           ></app-button>
 
         <div class="css-view-list-limiter">
