--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,10 +2,11 @@
   <div class="container-fluid">
     <div class="navbar-header" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"                             ><a class="nav-link" routerLink="/blog"  >Blog  </a></li>
-        <li class="nav-item"                             ><a class="nav-link" routerLink="/about" >About </a></li>
-        <li *ngIf="isUserNotLoggedIn()" class="nav-item" ><a class="nav-link" routerLink="/login" >LogIn </a></li>
-        <li *ngIf="isUserLoggedIn()"    class="nav-item" ><a class="nav-link" routerLink="/logout">LogOut</a></li>
+        <li class="nav-item"                             ><a class="nav-link" routerLink="/blog"    >Blog    </a></li>
+        <li class="nav-item"                             ><a class="nav-link" routerLink="/about"   >About   </a></li>
+        <li *ngIf="isUserNotLoggedIn()" class="nav-item" ><a class="nav-link" routerLink="/login"   >LogIn   </a></li>
+        <li *ngIf="isUserLoggedIn()"    class="nav-item" ><a class="nav-link" routerLink="/logout"  >LogOut  </a></li>
+        <li class="nav-item"                             ><a class="nav-link" routerLink="/contact" >Contact </a></li>
       </ul>
     </div>
   </div>
