--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,1 +1,56 @@
-<p>contact-form works!</p>
+<div>
+
+  <h3>Contact</h3>
+
+  <form #myUserForm="ngForm" (ngSubmit)="ngSubmitMyForm( myUserForm )">
+
+    <div class="form-group"><label for="contact_subject">Header</label>
+
+      <input #myVarContactSubject="ngModel"
+             required minlength="5"
+             maxlength="150"
+             type="text"
+             name="contact_subject"
+             class="form-control"
+             [(ngModel)]="contact_subject"
+             placeholder="Message Subject">
+
+      <div *ngIf="myVarContactSubject.touched && myVarContactSubject.invalid" class="alert alert-danger">
+
+        <p *ngIf="myVarContactSubject.errors && myVarContactSubject.errors['required']" >Blog Header is required</p>
+        <p *ngIf="myVarContactSubject.errors && myVarContactSubject.errors['minlength']" >Blog Header is to short. Minlength is {{ myVarContactSubject.errors['minlength'].requiredLength }}</p>
+        <p *ngIf="myVarContactSubject.errors && myVarContactSubject.errors['maxlength']" >Blog Header is to long.</p>
+
+      </div>
+
+    </div>
+
+
+    <div class="form-group"><label for="contact_text">Text      </label>
+
+      <textarea #myVarContactText="ngModel"
+                required
+                minlength="5"
+                maxlength="2000"
+                name="contact_text"
+                class="form-control"
+                [(ngModel)]="contact_text"
+                rows="10"
+                cols="40"
+                placeholder="Message Text"></textarea>
+
+      <div *ngIf="myVarContactText.touched && myVarContactText.invalid" class="alert alert-danger">
+        <p *ngIf="myVarContactText.errors && myVarContactText.errors['required']" >Blog Text is required</p>
+        <p *ngIf="myVarContactText.errors && myVarContactText.errors['minlength']" >Blog Text is to short. Minlength is {{ myVarContactText.errors['minlength'].requiredLength }}</p>
+        <p *ngIf="myVarContactText.errors && myVarContactText.errors['maxlength']" >Blog Text is to long.</p>
+      </div>
+
+    </div>
+
+    <br />
+
+    <button class="btn btn-primary" type="submit" [disabled]="myUserForm.invalid" >Submit</button>&nbsp;&nbsp;
+
+  </form>
+
+</div>
