--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -2,55 +2,52 @@
 
   <h3>Contact</h3>
 
-  <form #myUserForm="ngForm" (ngSubmit)="ngSubmitMyForm( myUserForm )">
+  <div *ngIf="showContactForm()">
 
-    <div class="form-group"><label for="contact_subject">Header</label>
+    <div [formGroup]="myUserForm">
 
-      <input #myVarContactSubject="ngModel"
-             required minlength="5"
-             maxlength="150"
-             type="text"
-             name="contact_subject"
-             class="form-control"
-             [(ngModel)]="contact_subject"
-             placeholder="Message Subject">
+      <div class="form-group">
 
-      <div *ngIf="myVarContactSubject.touched && myVarContactSubject.invalid" class="alert alert-danger">
+        <label for="contact_subject">Subject</label>
 
-        <p *ngIf="myVarContactSubject.errors && myVarContactSubject.errors['required']" >Blog Header is required</p>
-        <p *ngIf="myVarContactSubject.errors && myVarContactSubject.errors['minlength']" >Blog Header is to short. Minlength is {{ myVarContactSubject.errors['minlength'].requiredLength }}</p>
-        <p *ngIf="myVarContactSubject.errors && myVarContactSubject.errors['maxlength']" >Blog Header is to long.</p>
+        <input id="contact_subject" formControlName="contact_subject" type="text" class="form-control" placeholder="Message Subject">
+
+        <div *ngIf="contact_subject?.touched && contact_subject?.invalid" class="alert alert-danger">
+
+          <p *ngIf="contact_subject?.errors?.['required']">Subject is required</p>
+
+          <p *ngIf="contact_subject?.errors?.['minlength']">Subject is to short. Minlength is {{ contact_subject?.errors?.['minlength']?.requiredLength }}</p>
+
+        </div>
 
       </div>
 
-    </div>
+      <div class="form-group">
 
+        <label for="contact_text">Text</label>
 
-    <div class="form-group"><label for="contact_text">Text      </label>
+        <textarea id="contact_text" formControlName="contact_text" class="form-control" rows="10" placeholder="Message Text"></textarea>
 
-      <textarea #myVarContactText="ngModel"
-                required
-                minlength="5"
-                maxlength="2000"
-                name="contact_text"
-                class="form-control"
-                [(ngModel)]="contact_text"
-                rows="10"
-                cols="40"
-                placeholder="Message Text"></textarea>
+        <div *ngIf="contact_text?.touched && contact_text?.invalid" class="alert alert-danger">
 
-      <div *ngIf="myVarContactText.touched && myVarContactText.invalid" class="alert alert-danger">
-        <p *ngIf="myVarContactText.errors && myVarContactText.errors['required']" >Blog Text is required</p>
-        <p *ngIf="myVarContactText.errors && myVarContactText.errors['minlength']" >Blog Text is to short. Minlength is {{ myVarContactText.errors['minlength'].requiredLength }}</p>
-        <p *ngIf="myVarContactText.errors && myVarContactText.errors['maxlength']" >Blog Text is to long.</p>
+          <p *ngIf="contact_text?.errors?.['required']">Messagetext is required</p>
+
+          <p *ngIf="contact_text?.errors?.['minlength']">Messagetext is to short. Minlength is {{ contact_text?.errors?.['minlength']?.requiredLength }}</p>
+
+        </div>
+
       </div>
 
+      <button class="btn btn-primary" type="submit" [disabled]="myUserForm.invalid" (click)="onSubmit()">Submit</button>
+
     </div>
 
-    <br />
+  </div>
 
-    <button class="btn btn-primary" type="submit" [disabled]="myUserForm.invalid" >Submit</button>&nbsp;&nbsp;
+  <div *ngIf="showConfirmMessage()">
 
-  </form>
+    <p>Contact wurde verschickt</p>
+
+  </div>
 
 </div>
