--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -1,1 +1,5 @@
-<p>log-in works!</p>
+<h1>Login Successfull</h1>
+<p>Logged in as <br>
+User ID   {{ this.blogUser.m_user_id }} <br>
+User Name {{ this.blogUser.m_user_name }} <br>
+</p>
