--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -28,7 +28,7 @@
 
         <label for="contact_email">eMail Adress</label>
 
-        <input id="contact_email" formControlName="contact_email" type="text" class="form-control" placeholder="Name">
+        <input id="contact_email" formControlName="contact_email" type="text" class="form-control" placeholder="eMail">
 
         <div *ngIf="contact_email?.touched && contact_email?.invalid" class="alert alert-danger">
 
