--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -1,5 +1,67 @@
-<h1>Login Successfull</h1>
-<p>Logged in as <br>
-User ID   {{ this.blogUser.m_user_id }} <br>
-User Name {{ this.blogUser.m_user_name }} <br>
-</p>
+<div>
+
+  <h3>Log In</h3>
+
+  <div *ngIf="isUserLoggedOut()">
+
+    <div [formGroup]="myUserForm">
+
+      <div class="form-group">
+
+        <label for="user_name">Name</label>
+
+        <input id="user_name" formControlName="user_name" type="text" class="form-control" placeholder="User name">
+
+        <div *ngIf="user_name?.touched && user_name?.invalid" class="alert alert-danger">
+
+          <p *ngIf="user_name?.errors?.['required']">Username is required</p>
+
+          <p *ngIf="user_name?.errors?.['minlength']">Username is to short. Minlength is {{ user_name?.errors?.['minlength']?.requiredLength }}</p>
+
+        </div>
+
+      </div>
+
+
+      <div class="form-group">
+
+        <label for="user_password">User Password</label>
+
+        <input id="user_password" formControlName="user_password" type="password" class="form-control" placeholder="User password">
+
+        <div *ngIf="user_password?.touched && user_password?.invalid" class="alert alert-danger">
+
+          <p *ngIf="user_password?.errors?.['required']">User password is required</p>
+
+        </div>
+
+      </div>
+
+      <button class="btn btn-primary" type="submit" [disabled]="myUserForm.invalid" (click)="onSubmit()">Log In</button>
+
+    </div>
+
+    <br>
+
+    <div *ngIf="user_login_failed" class="alert alert-danger">
+
+      {{ getLogInFailedMessage() }}
+
+    </div>
+
+  </div>
+
+  <div *ngIf="isUserLoggedIn()">
+
+    <h1>Login Successfull</h1>
+    <p>Logged in as <br>
+    User ID   {{ this.blogUser.m_user_id }} <br>
+    User Name {{ this.blogUser.m_user_name }} <br>
+    </p>
+
+  </div>
+
+</div>
+
+
+
