--- a/src/app/components/blog-edit-form/blog-edit-form.component.html
+++ b/src/app/components/blog-edit-form/blog-edit-form.component.html
@@ -1,6 +1,6 @@
 <div>
 
-  <h3>Edit Blog Entry</h3>
+  <h3>{{ str_headline }}</h3>
 
   <form #myUserForm="ngForm" (ngSubmit)="ngSubmitMyForm( myUserForm )">
 
